--- a/ultimate_mlb_manager_backend/Gemfile
+++ b/ultimate_mlb_manager_backend/Gemfile
@@ -25,6 +25,12 @@ gem 'bootsnap', '>= 1.4.2', require: false
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 gem 'rack-cors'
 
+#Active model Serializer / render JSON 
+gem 'active_model_serializers'
+
+#DotENV for holding private API keys
+gem 'dotenv'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
