--- a/ultimate_mlb_manager_backend/Gemfile
+++ b/ultimate_mlb_manager_backend/Gemfile
@@ -41,6 +41,9 @@ gem 'date'
 
 gem 'pry-rails'
 
+gem 'active_model_serializers'
+
+
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
